1、添加gif图片处理库 2、优化文章编辑页面的附件上传体验 3、附件能够和文章对应

--- a/trunk/M-LOG/web/script/uploadify/uploadify.css
+++ b/trunk/M-LOG/web/script/uploadify/uploadify.css
@@ -9,6 +9,13 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	margin-bottom: 1em;
 }
 .uploadify-button {
+	background: url("uploadify-select.gif") no-repeat scroll 0 0 transparent;
+    color: #000000;
+    display: block;
+    height: 24px;
+    padding: 0 0 0 25px;
+    width: 90px;
+	/*
 	background-color: #505050;
 	background-image: linear-gradient(bottom, #505050 0%, #707070 100%);
 	background-image: -o-linear-gradient(bottom, #505050 0%, #707070 100%);
@@ -33,8 +40,12 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	text-align: center;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 	width: 100%;
+	*/
 }
+
 .uploadify:hover .uploadify-button {
+	color: #808080;
+	/*
 	background-color: #606060;
 	background-image: linear-gradient(top, #606060 0%, #808080 100%);
 	background-image: -o-linear-gradient(top, #606060 0%, #808080 100%);
@@ -49,6 +60,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 		color-stop(1, #808080)
 	);
 	background-position: center bottom;
+	*/
 }
 .uploadify-button.disabled {
 	background-color: #D0D0D0;
@@ -58,6 +70,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	margin-bottom: 1em;
 }
 .uploadify-queue-item {
+	/*
 	background-color: #F5F5F5;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
@@ -66,6 +79,29 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	margin-top: 5px;
 	max-width: 350px;
 	padding: 10px;
+	*/
+	
+	/*
+	background-color: #F5F5F5;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	font: 11px Verdana, Geneva, sans-serif;
+	*/
+	
+	-moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #F5F5F5;
+	border:#E5E5E5 solid 1px;
+    font: 11px Verdana,Geneva,sans-serif;
+    height: 30px;
+    margin: 1px;
+    padding: 2px;
+    width: 339px;
+	float:left;
 }
 .uploadify-error {
 	background-color: #FDE5DD !important;
