--- a/trunk/M-LOG/web/skins/simple-two/style/jaw.css
+++ b/trunk/M-LOG/web/skins/simple-two/style/jaw.css
@@ -17,24 +17,11 @@
 	-khtml-box-shadow: 1px 1px 3px #dcdcdc inset;
 	border-radius: 0px;
 	resize: none;
-}
-
-body,button,select,textarea,input {
-	font: 12px/1.125 Arial, Helvetica, sans-serif;
-}
-
-textarea {
-	-webkit-appearance: textarea;
-	background-color: white;
-	border: 1px solid;
-	border-image: initial;
-	-webkit-rtl-ordering: logical;
-	-webkit-user-select: text;
-	-webkit-box-orient: vertical;
 	white-space: pre-wrap;
 	word-wrap: break-word;
 }
 
+/*
 input,textarea,keygen,select,button,isindex {
 	margin: 0em;
 	font: -webkit-small-control;
@@ -44,10 +31,28 @@ input,textarea,keygen,select,button,isindex {
 	text-transform: none;
 	text-indent: 0px;
 	text-shadow: none;
-	/*display: inline-block;*/
+	display: inline-block;
 	text-align: start;
 }
 
 input,textarea,keygen,select,button,isindex,meter,progress {
 	-webkit-writing-mode: horizontal-tb;
 }
+*/
+
+ul.jaws { list-style-type: none; margin: 20px 0 0 0; }
+
+ul.jaws li {
+	overflow:hidden;
+	padding: 0 0 10px 0;
+	margin: 0 0 10px 0;
+	border-bottom: 1px solid #eee;
+}
+ul.jaws li a {text-decoration:none;}
+
+ul.jaws li .portrait {float:left; width:50px;}
+ul.jaws li .portrait img {width:40px;height:40px;margin-top:2px;}
+ul.jaws li .jaw {float:left;}
+ul.jaws li .jaw p {color: #000; overflow:hidden; word-break:break-all; line-height:22px;}
+ul.jaws li .jaw .meta {color:#888; font-size:9pt;}
+ul.jaws li .img {margin:5px 0;}
