--- a/trunk/M-LOG/web/script/twittereditor/twitterinput.css
+++ b/trunk/M-LOG/web/script/twittereditor/twitterinput.css
@@ -1,10 +1,77 @@
 @CHARSET "UTF-8";
 /*全局*/
 .left {
-	float:left;
+	float: left;
 }
+
 .right {
-	float:right;
+	float: right;
+}
+
+.twitter-clearfix {
+	*zoom: 1;
+}
+
+.twitter-clearfix:before,.twitter-clearfix:after {
+	display: table;
+	content: "";
+}
+
+.twitter-clearfix:after {
+	clear: both;
+}
+
+/*按钮*/
+.twitter-btn {
+	display: inline-block;
+	*display: inline;
+	*zoom: 1;
+	padding: 4px 10px 4px;
+	margin-bottom: 0;
+	font-size: 13px;
+	line-height: 18px;
+	color: #333333;
+	text-align: center;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	vertical-align: middle;
+	background-color: #f5f5f5;
+	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff),
+		to(#e6e6e6));
+	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: linear-gradient(top, #ffffff, #e6e6e6);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff',
+		endColorstr='#e6e6e6', GradientType=0);
+	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+	border: 1px solid #cccccc;
+	border-bottom-color: #b3b3b3;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px
+		rgba(0, 0, 0, 0.05);
+	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px
+		rgba(0, 0, 0, 0.05);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px
+		rgba(0, 0, 0, 0.05);
+	cursor: pointer;
+	*margin-left: .3em;
+}
+
+.twitter-btn.disabled,.twitter-btn[disabled] {
+	cursor: default;
+	background-image: none;
+	background-color: #e6e6e6;
+	opacity: 0.65;
+	filter: alpha(opacity = 65);
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
 }
 
 /*文本输入框*/
@@ -28,14 +95,16 @@
 	white-space: pre-wrap;
 	word-wrap: break-word;
 }
+
 .twitter-input p {
-	margin:0;
+	margin: 0;
 }
 
 /*底部工具*/
 .bottom-tools {
-	padding:5px 0 0 0;
+	padding: 5px 0 0 0;
 }
+
 .insert-buttons a {
 	font-size: 9pt;
 	text-decoration: none;
@@ -44,17 +113,26 @@
 	padding: 1px 2px 1px 18px;
 	cursor: pointer;
 }
+
 .insert-buttons a:hover {
 	border: 1px solid #5CC26F;
 }
+
 .insert-buttons span {
 	font-weight: bold;
 }
+
 .insert_em {
-	background:url('images/emotion.gif') no-repeat left center;
+	background: url('images/emotion.gif') no-repeat left center;
 }
 
-/*表情输入框*/
+.insert_img {
+	background: url('images/img.gif') no-repeat left center;	
+}
+
+
+
+/*弹出框*/
 .layer {
 	display: none;
 	position: absolute;
@@ -81,7 +159,7 @@
 }
 
 .layer-popup-title a:HOVER {
-	color: red; 
+	color: red;
 }
 
 .layer .l {
@@ -96,6 +174,13 @@
 
 .layer-popup-arrow.em {
 	background-position: 51px 0px;
+}
+.layer-popup-arrow.img {
+	background-position: 102px 0px;
+}
+
+.layer-popup-arrow li {
+	display:none;
 }
 
 .layer-popup {
@@ -116,4 +201,11 @@
 
 .layer-popup a.emotion_img:hover {
 	border: 1px solid #5CC26F;
+}
+
+
+#ajax_processing {
+	display: none;
+	background:url('images/loading.gif') no-repeat left center; 
+	padding:0 0 0 18px;
 }
